updated box size to 40X25px fixed language error fixed minor yellow box overlap fixed unable to udpate box size for newly created annotation updated Login API

--- a/public/css/contract-view.css
+++ b/public/css/contract-view.css
@@ -779,3 +779,7 @@ span.error{color:red; margin-top: 5px; display: inline-block}
     z-index: 1000;
 }
 
+.annotator-raw, .boxer-hl {
+    border: 1px dotted black;
+}
+
